<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- No necessary -->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="app_name">Soccer Board</string>
    <string name="title_activity_tutorial">Tutorial</string>
    
    <!-- TacticBoard defined Strings -->
    <string name="small_text">Small Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="large_text">Large Text</string>
    
    <string name="new_file">New</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="color">Color</string>
    
    <string name="drag_player">Drag Player</string>
    <string name="drag_text">Drag Text</string>
    <string name="remove_player">Remove Player</string>
    
    <string name="player_move">Player Move</string>
    <string name="short_pass">Short Pass</string>
    <string name="long_pass">Long Pass</string>
    <string name="move_with_ball">Move with Ball</string>
    <string name="free_drawing">Free Drawing</string>
    <string name="start">Start</string>
    
    <string name="save_image">Image saved to gallery</string>
    
</resources>